[package]
name = "roles"
version = "0.1.0"
authors = ["guillemcordoba <guillem.cordoba@gmail.com>"]
repository = "https://github.com/guillemcordoba/hc_zome_roles"
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = "=0.0.42-alpha5"
hdk_proc_macros = "=0.0.42-alpha5"
holochain_wasm_utils = "=0.0.42-alpha5"
holochain_json_derive = "=0.0.17"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
