[package]
name = "wiki"
version = "0.1.0"
authors = ["hc-scaffold-framework"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_json = { version = "^1.0", features = ["preserve_order"] }
serde_derive = "^1.0"
hdk = "=0.0.45-alpha1"
holochain_json_api = "0.0" 
hdk_proc_macros = "=0.0.45-alpha1"
holochain_wasm_utils = "=0.0.45-alpha1"
holochain_json_derive = "=0.0"
holochain_roles =  { path = "../../../../holochain_roles" }
holochain_anchors = { path = "../../../../holochain_anchors" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
